tests/tooling/fixtures/native/execution/negative/bitwise_bool_operand.objc3
module BitwiseBoolOperand;

fn main() -> i32 {
  let flag = true;
  let x = flag & 1;
  return x;
}